# mcp-remote-ssh

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
src/mcp_remote_ssh/: __init__.py  lifespan.py  session.py
src/mcp_remote_ssh/server/: __init__.py  connection.py  execute.py  forward.py  helpers.py  sftp.py  shell.py
